feat: Basic endpoint for managing customers
